# mcpbot

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  run.py  sitemap.xml
.github/actions/python-setup/: action.yml
.github/workflows/: docs.yml
docs/: index.md
mcpbot/: config-azure.yml  config-local.yml  main.py
mcpbot/client/: oauth2.py
mcpbot/client/conversations/: __init__.py  create.py  delete.py  list.py
mcpbot/client/endpoints/auth/: token.py
mcpbot/client/endpoints/conversations/: __init__.py  create.py  delete.py  list.py
mcpbot/client/endpoints/messages/: __init__.py  create.py  delete.py  list.py  patch.py
mcpbot/client/messages/: __init__.py  create.py  delete.py  list.py  patch.py
mcpbot/server/: __init__.py  common.py  context.py
mcpbot/server/prompts/: __init__.py  client_prompt.py
mcpbot/server/tools/: __init__.py  book_desk.py  book_parking.py  people_in_office.py  rag.py  unbook_desk.py  unbook_parking.py
mcpbot/server/tools/common/: joan_api.py
mcpbot/server/tools/joan_api/: book_desk.py  book_parking.py  people_in_office.py  unbook_desk.py  unbook_parking.py
mcpbot/server/tools/joan_api/common/: api.py  config.py
mcpbot/shared/: auth.py  token.py
mcpbot/shared/config/: __init__.py  main.py  yaml_schema.py
mcpbot/shared/init/: __init__.py  config_processing.py
mcpbot/shared/services/: __init__.py  auth.py  database_chat.py  database_vector.py  llm.py  secrets.py
mcpbot/shared/utils/: __init__.py  base_models.py  metaclasses.py  read_files.py
scripts/: create_document.py  host_api.py  question.py  question_request.py
search/: search_index.json
ui/: .dockerignore  .gitignore  Dockerfile  host.html  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.css  App.tsx  main.tsx
ui/src/backend/: auth.ts  common.ts  conversations.ts  messages.ts
ui/src/components/: Message.tsx  MessageForm.tsx  index.ts
ui/src/components/icons/: BotIcon.tsx  Spinner.tsx  index.ts
ui/src/constants/: main.ts
ui/src/hooks/: index.ts  useAutoScroll.ts  useChatConversation.ts
ui/src/utils/: chatSync.ts  index.ts  tokenStorage.ts
